config/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment
  namespace: host-ns
spec:
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - name: sample
        image: ko://github.com/anishj0shi/sample-service
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i1-deployment
  namespace: invoker-ns
spec:
  selector:
    matchLabels:
      app: i1
  template:
    metadata:
      labels:
        app: i1
    spec:
      containers:
      - name: i1
        image: ko://github.com/anishj0shi/sample-service
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: i2-deployment
  namespace: invoker-ns
spec:
  selector:
    matchLabels:
      app: i2
  template:
    metadata:
      labels:
        app: i2
    spec:
      containers:
      - name: i2
        image: ko://github.com/anishj0shi/sample-service
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
