config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: host-ns
spec:
  type: ClusterIP
  selector:
    app: sample
  ports:
  - port: 80
    targetPort: 8080
